<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_doctor_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.materialtest.DoctorMainActivity">
<include layout="@layout/bar_layout"></include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@id/middle"
        android:layout_margin="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/doctor_main_status"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_weight="1"/>
        <Button
            android:layout_width="0dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"

            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/doctor_main_publish"
            style="@style/learnMoreBtnStyle"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/middle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@id/bottom"
        android:layout_margin="@dimen/activity_vertical_margin"
         >
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/doctor_main_busy"
            android:layout_weight="1"
            style="@style/learnMoreBtnStyle"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>
        <Button
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/doctor_main_idle"
            android:layout_weight="1"
            style="@style/learnMoreBtnStyle"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_margin="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"

            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/contacts"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textViewStyle"
                android:text="@string/doctor_main_prescriptions"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/contacts"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textViewStyle"
                android:layout_gravity="center"
                android:text="@string/doctor_main_patient_list"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/contacts"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textViewStyle"
                android:text="@string/doctor_main_edit"
                android:layout_gravity="center"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
